list working within java8 and java9